# ZomatoAIreccomendations

./: .dockerignore  .env.example  .gitignore  CLOUD_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  PROJECT_STATUS.md  Procfile  README.md  ROLLBACK.md  TODO_TOMORROW.md  benchmark.py  check_data.py  main.py  parquet_test.py  pyproject.toml  railway.json  render.yaml  requirements.txt  test_edge_cases.py
data/: restaurants.parquet
docs/: DesignDoc.md  improvements.md  phase-wise-architecture.md  runbook.md
frontend/src/app/: page.tsx
frontend/src/app/components/: SearchForm.tsx
frontend/src/lib/: api.ts
scripts/: run.ps1
src/restaurant_rec/: __main__.py
src/restaurant_rec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/restaurant_rec/phase1/: __init__.py  config.py  hf_dataset_source.py  ingestion.py  models.py  normalize.py  ports.py  store_parquet.py  text_normalize.py
src/restaurant_rec/phase2/: __init__.py  cli.py  filter.py  preferences.py  recommendation.py
src/restaurant_rec/phase3/: groq.py  llm_recommendation.py  prompting.py  smoke.py
src/restaurant_rec/phase4/: app.py
src/restaurant_rec/phase5/: cache.py  logging.py
src/restaurant_rec/phase5/tests/: test_integration.py  test_phase4_api.py  test_recommendation.py  test_simple.py
