[project]
name = "restaurant-rec"
version = "0.1.0"
description = "AI-Powered Restaurant Recommendation System (phase-wise scaffold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-dotenv>=1.0",
  "pydantic>=2.0",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "requests>=2.32",
  "datasets>=2.20",
  "httpx>=0.27",
]

[project.scripts]
restaurant-rec = "restaurant_rec.phase2.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
